# learning_github_actions

./: main.py  pyproject.toml
.github/: output.yml
.github/workflows/: my_first_action.yml  test.yml
tests/: test_api.py
